package de.bublitz.balancer.server.components.strategien;

import de.bublitz.balancer.server.model.Anschluss;
import de.bublitz.balancer.server.model.ChargeBox;
import de.bublitz.balancer.server.model.enums.LoadStrategy;
import de.bublitz.balancer.server.model.exception.NotStoppedException;
// Round robin
public class FirstInFirstOutStrategy extends Strategy {

    public FirstInFirstOutStrategy(Anschluss anschluss) {
        super(anschluss, LoadStrategy.FIFO);
    }

    @Override
    public void optimize() throws NotStoppedException {
        if (!suspendedList.isEmpty()) {
            // Es gibt unterbrochene Ladevorgänge
            ChargeBox u0 = suspendedList.getFirst();
            suspendedList.remove(u0);
            // Entferne u0 von der suspendedList
            u0.setCurrentLoad(u0.getLastLoad());
            // Füge u0 in den Schedule ein mit der alten Last
            addLV(u0);
            // starte den LV
            start(u0);
        } else {
            int tries = 0;
            while (anschlussLoad > anschluss.getHardLimit() && !chargingList.isEmpty() && tries <= 5) {
                ChargeBox l0 = chargingList.getFirst();
                double l0_Load = l0.getCurrentLoad();
                tries++;
                if (stop(l0)) {
                    chargingList.remove(l0);
                    anschlussLoad -= l0_Load;
                    suspendedList.add(l0);
                    tries = 0;
                }
                if (tries == 5)
                    throw new NotStoppedException();
            }
            anschluss.computeLoad();
            calculateFitting(anschlussLoad);
        }
    }

    @Override
    public void addLV(ChargeBox chargeBox) {
        anschlussLoad = anschluss.getCurrentLoad();
        if (anschlussLoad <= anschluss.getHardLimit()) {
            chargingList.add(chargeBox);
        } else {
            while (anschlussLoad > anschluss.getHardLimit()) {
                ChargeBox l0 = chargingList.getFirst();
                chargingList.remove(l0);
                anschlussLoad -= l0.getCurrentLoad();
                tmpSuspendedList.add(l0); // Stop later
            }
            calculateFitting(anschlussLoad);
            chargingList.add(chargeBox);
            //start(chargeBox);
            //anschlussLoad += cbLoad;
        }
        tmpSuspendedList.forEach(this::stop);
        suspendedList.addAll(tmpSuspendedList);
        tmpSuspendedList.clear();
        anschluss.computeLoad();
    }
}
